// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`supports multi-seat contests allows a second candidate to be selected when one is selected 1`] = `
.c2 {
  line-height: 1.2;
  max-width: 66ch;
}

.c2 h1 {
  line-height: 1.1;
  margin: 2rem 0 1rem;
}

.c2 h2 {
  margin: 1.5rem 0 1rem;
}

.c2 h3,
.c2 p {
  margin: 1rem 0;
}

.c2 h1 + h2 {
  margin-top: -0.75rem;
}

.c2 h1 + p,
.c2 h2 + p,
.c2 h3 + p {
  margin-top: -0.75rem;
}

.c2 :first-child {
  margin-top: 0;
}

.c2 :last-child {
  margin-bottom: 0;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  width: 100%;
  max-width: 35rem;
  margin: 0px auto;
  padding: 1rem 0.75rem 0.5rem;
}

.c3 {
  font-size: 0.85rem;
  font-weight: 600;
  text-transform: uppercase;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  overflow: auto;
}

.c4:before,
.c4:after {
  content: '';
  z-index: 1;
  -webkit-transition: opacity 0.25s ease;
  transition: opacity 0.25s ease;
  position: absolute;
  height: 0.25rem;
  width: 100%;
}

.c4:before {
  top: 0;
  opacity: 0;
  background: linear-gradient( to bottom, rgb(177,186,190) 0%, transparent 100% );
}

.c4:after {
  bottom: 0;
  opacity: 0;
  background: linear-gradient( to bottom, transparent 0%, rgb(177,186,190) 100% );
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
}

.c6 {
  width: 100%;
  max-width: 35rem;
  margin: 0 auto;
  padding: 0.5rem 0.5rem 1rem;
}

.c7 {
  display: grid;
  grid-auto-rows: minmax(auto,1fr);
  grid-gap: 0.75rem;
}

.c10 {
  cursor: pointer;
  position: relative;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.125rem;
  background: white;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  -webkit-transition: background 0.25s,color 0.25s;
  transition: background 0.25s,color 0.25s;
}

button.c10 {
  text-align: left;
}

.c10:focus-within {
  outline: -webkit-focus-ring-color auto 5px;
}

.c10:before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  background: white;
  border-right: 1px solid;
  border-color: lightgrey;
  width: 3rem;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 2rem;
  border-radius: 0.125rem 0 0 0.125rem;
  color: #028099;
}

.c10 > div {
  word-break: break-word;
  padding: 0.5rem 0.5rem 0.5rem 4rem;
}

.c8 {
  cursor: pointer;
  position: relative;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.125rem;
  background: #028099;
  color: white;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  -webkit-transition: background 0.25s,color 0.25s;
  transition: background 0.25s,color 0.25s;
}

button.c8 {
  text-align: left;
}

.c8:focus-within {
  outline: -webkit-focus-ring-color auto 5px;
}

.c8:before {
  content: '✓';
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  background: white;
  border-right: 1px solid;
  border-color: #028099;
  width: 3rem;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 2rem;
  border-radius: 0.125rem 0 0 0.125rem;
  color: #028099;
}

.c8 > div {
  word-break: break-word;
  padding: 0.5rem 0.5rem 0.5rem 4rem;
}

.c9 {
  margin-right: 0.5rem;
}

@media (min-width:480px) {
  .c2 {
    line-height: 1.3;
  }
}

@media (min-width:720px) {
  .c1 {
    padding: 1rem 1.5rem 0.5rem;
    padding-left: 5rem;
  }
}

@media (min-width:720px) {
  .c6 {
    padding-right: 1rem;
    padding-left: 1rem;
  }
}

@media (min-width:480px) {
  .c10 > div {
    padding: 1rem 1rem 1rem inherit;
  }
}

@media (min-width:480px) {
  .c8 > div {
    padding: 1rem 1rem 1rem inherit;
  }
}

<div>
  <main
    class="c0"
  >
    <div
      class="c1"
      id="contest-header"
    >
      <div
        class="c2"
      >
        <h1
          aria-label="City, Mayor."
        >
          <div
            class="c3"
          >
            City
          </div>
          Mayor
        </h1>
        <p>
          <strong>
            Vote for 
            2
            .
          </strong>
           You have selected
           
          1
          .
        </p>
      </div>
    </div>
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <div
            aria-labelledby="contest-header"
            class="c7"
            role="group"
          >
            <label
              class="c8"
              for="name-0"
            >
              <input
                checked=""
                class="visually-hidden c9"
                id="name-0"
                name="Name 0"
                type="checkbox"
                value="name-0"
              />
              <div
                class="c2"
              >
                <p
                  aria-label="Name 0, Party 0."
                >
                  <strong>
                    Name 0
                  </strong>
                  <br />
                  Party 0
                </p>
              </div>
            </label>
            <label
              class="c10"
              for="name-1"
            >
              <input
                class="visually-hidden c9"
                id="name-1"
                name="Name 1"
                type="checkbox"
                value="name-1"
              />
              <div
                class="c2"
              >
                <p
                  aria-label="Name 1, Party 1."
                >
                  <strong>
                    Name 1
                  </strong>
                  <br />
                  Party 1
                </p>
              </div>
            </label>
            <label
              class="c10"
              for="name-2"
            >
              <input
                class="visually-hidden c9"
                id="name-2"
                name="Name 2"
                type="checkbox"
                value="name-2"
              />
              <div
                class="c2"
              >
                <p
                  aria-label="Name 2, Party 0."
                >
                  <strong>
                    Name 2
                  </strong>
                  <br />
                  Party 0
                </p>
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`supports single-seat contest allows any candidate to be selected when no candidate is selected 1`] = `
.c2 {
  line-height: 1.2;
  max-width: 66ch;
}

.c2 h1 {
  line-height: 1.1;
  margin: 2rem 0 1rem;
}

.c2 h2 {
  margin: 1.5rem 0 1rem;
}

.c2 h3,
.c2 p {
  margin: 1rem 0;
}

.c2 h1 + h2 {
  margin-top: -0.75rem;
}

.c2 h1 + p,
.c2 h2 + p,
.c2 h3 + p {
  margin-top: -0.75rem;
}

.c2 :first-child {
  margin-top: 0;
}

.c2 :last-child {
  margin-bottom: 0;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  width: 100%;
  max-width: 35rem;
  margin: 0px auto;
  padding: 1rem 0.75rem 0.5rem;
}

.c3 {
  font-size: 0.85rem;
  font-weight: 600;
  text-transform: uppercase;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  overflow: auto;
}

.c4:before,
.c4:after {
  content: '';
  z-index: 1;
  -webkit-transition: opacity 0.25s ease;
  transition: opacity 0.25s ease;
  position: absolute;
  height: 0.25rem;
  width: 100%;
}

.c4:before {
  top: 0;
  opacity: 0;
  background: linear-gradient( to bottom, rgb(177,186,190) 0%, transparent 100% );
}

.c4:after {
  bottom: 0;
  opacity: 0;
  background: linear-gradient( to bottom, transparent 0%, rgb(177,186,190) 100% );
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
}

.c6 {
  width: 100%;
  max-width: 35rem;
  margin: 0 auto;
  padding: 0.5rem 0.5rem 1rem;
}

.c7 {
  display: grid;
  grid-auto-rows: minmax(auto,1fr);
  grid-gap: 0.75rem;
}

.c8 {
  cursor: pointer;
  position: relative;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.125rem;
  background: white;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  -webkit-transition: background 0.25s,color 0.25s;
  transition: background 0.25s,color 0.25s;
}

button.c8 {
  text-align: left;
}

.c8:focus-within {
  outline: -webkit-focus-ring-color auto 5px;
}

.c8:before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  background: white;
  border-right: 1px solid;
  border-color: lightgrey;
  width: 3rem;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 2rem;
  border-radius: 0.125rem 0 0 0.125rem;
  color: #028099;
}

.c8 > div {
  word-break: break-word;
  padding: 0.5rem 0.5rem 0.5rem 4rem;
}

.c9 {
  margin-right: 0.5rem;
}

@media (min-width:480px) {
  .c2 {
    line-height: 1.3;
  }
}

@media (min-width:720px) {
  .c1 {
    padding: 1rem 1.5rem 0.5rem;
    padding-left: 5rem;
  }
}

@media (min-width:720px) {
  .c6 {
    padding-right: 1rem;
    padding-left: 1rem;
  }
}

@media (min-width:480px) {
  .c8 > div {
    padding: 1rem 1rem 1rem inherit;
  }
}

<div>
  <main
    class="c0"
  >
    <div
      class="c1"
      id="contest-header"
    >
      <div
        class="c2"
      >
        <h1
          aria-label="City, Mayor."
        >
          <div
            class="c3"
          >
            City
          </div>
          Mayor
        </h1>
        <p>
          <strong>
            Vote for 
            1
            .
          </strong>
           You have selected
           
          0
          .
        </p>
      </div>
    </div>
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <div
            aria-labelledby="contest-header"
            class="c7"
            role="group"
          >
            <label
              class="c8"
              for="name-0"
            >
              <input
                class="visually-hidden c9"
                id="name-0"
                name="Name 0"
                type="checkbox"
                value="name-0"
              />
              <div
                class="c2"
              >
                <p
                  aria-label="Name 0, Party 0."
                >
                  <strong>
                    Name 0
                  </strong>
                  <br />
                  Party 0
                </p>
              </div>
            </label>
            <label
              class="c8"
              for="name-1"
            >
              <input
                class="visually-hidden c9"
                id="name-1"
                name="Name 1"
                type="checkbox"
                value="name-1"
              />
              <div
                class="c2"
              >
                <p
                  aria-label="Name 1, Party 1."
                >
                  <strong>
                    Name 1
                  </strong>
                  <br />
                  Party 1
                </p>
              </div>
            </label>
            <label
              class="c8"
              for="name-2"
            >
              <input
                class="visually-hidden c9"
                id="name-2"
                name="Name 2"
                type="checkbox"
                value="name-2"
              />
              <div
                class="c2"
              >
                <p
                  aria-label="Name 2, Party 0."
                >
                  <strong>
                    Name 2
                  </strong>
                  <br />
                  Party 0
                </p>
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`supports single-seat contest doesn't allow other candidates to be selected when a candidate is selected 1`] = `
.c2 {
  line-height: 1.2;
  max-width: 66ch;
}

.c2 h1 {
  line-height: 1.1;
  margin: 2rem 0 1rem;
}

.c2 h2 {
  margin: 1.5rem 0 1rem;
}

.c2 h3,
.c2 p {
  margin: 1rem 0;
}

.c2 h1 + h2 {
  margin-top: -0.75rem;
}

.c2 h1 + p,
.c2 h2 + p,
.c2 h3 + p {
  margin-top: -0.75rem;
}

.c2 :first-child {
  margin-top: 0;
}

.c2 :last-child {
  margin-bottom: 0;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  width: 100%;
  max-width: 35rem;
  margin: 0px auto;
  padding: 1rem 0.75rem 0.5rem;
}

.c3 {
  font-size: 0.85rem;
  font-weight: 600;
  text-transform: uppercase;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  overflow: auto;
}

.c4:before,
.c4:after {
  content: '';
  z-index: 1;
  -webkit-transition: opacity 0.25s ease;
  transition: opacity 0.25s ease;
  position: absolute;
  height: 0.25rem;
  width: 100%;
}

.c4:before {
  top: 0;
  opacity: 0;
  background: linear-gradient( to bottom, rgb(177,186,190) 0%, transparent 100% );
}

.c4:after {
  bottom: 0;
  opacity: 0;
  background: linear-gradient( to bottom, transparent 0%, rgb(177,186,190) 100% );
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
}

.c6 {
  width: 100%;
  max-width: 35rem;
  margin: 0 auto;
  padding: 0.5rem 0.5rem 1rem;
}

.c7 {
  display: grid;
  grid-auto-rows: minmax(auto,1fr);
  grid-gap: 0.75rem;
}

.c10 {
  cursor: pointer;
  position: relative;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.125rem;
  background: white;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  -webkit-transition: background 0.25s,color 0.25s;
  transition: background 0.25s,color 0.25s;
}

button.c10 {
  text-align: left;
}

.c10:focus-within {
  outline: -webkit-focus-ring-color auto 5px;
}

.c10:before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  background: white;
  border-right: 1px solid;
  border-color: lightgrey;
  width: 3rem;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 2rem;
  border-radius: 0.125rem 0 0 0.125rem;
  color: #028099;
}

.c10 > div {
  word-break: break-word;
  padding: 0.5rem 0.5rem 0.5rem 4rem;
}

.c8 {
  cursor: pointer;
  position: relative;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.125rem;
  background: #028099;
  color: white;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  -webkit-transition: background 0.25s,color 0.25s;
  transition: background 0.25s,color 0.25s;
}

button.c8 {
  text-align: left;
}

.c8:focus-within {
  outline: -webkit-focus-ring-color auto 5px;
}

.c8:before {
  content: '✓';
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  background: white;
  border-right: 1px solid;
  border-color: #028099;
  width: 3rem;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 2rem;
  border-radius: 0.125rem 0 0 0.125rem;
  color: #028099;
}

.c8 > div {
  word-break: break-word;
  padding: 0.5rem 0.5rem 0.5rem 4rem;
}

.c9 {
  margin-right: 0.5rem;
}

@media (min-width:480px) {
  .c2 {
    line-height: 1.3;
  }
}

@media (min-width:720px) {
  .c1 {
    padding: 1rem 1.5rem 0.5rem;
    padding-left: 5rem;
  }
}

@media (min-width:720px) {
  .c6 {
    padding-right: 1rem;
    padding-left: 1rem;
  }
}

@media (min-width:480px) {
  .c10 > div {
    padding: 1rem 1rem 1rem inherit;
  }
}

@media (min-width:480px) {
  .c8 > div {
    padding: 1rem 1rem 1rem inherit;
  }
}

<div>
  <main
    class="c0"
  >
    <div
      class="c1"
      id="contest-header"
    >
      <div
        class="c2"
      >
        <h1
          aria-label="City, Mayor."
        >
          <div
            class="c3"
          >
            City
          </div>
          Mayor
        </h1>
        <p>
          <strong>
            Vote for 
            1
            .
          </strong>
           You have selected
           
          1
          .
        </p>
      </div>
    </div>
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <div
            aria-labelledby="contest-header"
            class="c7"
            role="group"
          >
            <label
              class="c8"
              for="name-0"
            >
              <input
                checked=""
                class="visually-hidden c9"
                id="name-0"
                name="Name 0"
                type="checkbox"
                value="name-0"
              />
              <div
                class="c2"
              >
                <p
                  aria-label="Name 0, Party 0."
                >
                  <strong>
                    Name 0
                  </strong>
                  <br />
                  Party 0
                </p>
              </div>
            </label>
            <label
              class="c10"
              for="name-1"
            >
              <input
                class="visually-hidden c9"
                disabled=""
                id="name-1"
                name="Name 1"
                type="checkbox"
                value="name-1"
              />
              <div
                class="c2"
              >
                <p
                  aria-label="Name 1, Party 1."
                >
                  <strong>
                    Name 1
                  </strong>
                  <br />
                  Party 1
                </p>
              </div>
            </label>
            <label
              class="c10"
              for="name-2"
            >
              <input
                class="visually-hidden c9"
                disabled=""
                id="name-2"
                name="Name 2"
                type="checkbox"
                value="name-2"
              />
              <div
                class="c2"
              >
                <p
                  aria-label="Name 2, Party 0."
                >
                  <strong>
                    Name 2
                  </strong>
                  <br />
                  Party 0
                </p>
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`supports write-in candidates displays warning if write-in candidate name is too long 1`] = `
.c2 {
  line-height: 1.2;
  max-width: 66ch;
}

.c2 h1 {
  line-height: 1.1;
  margin: 2rem 0 1rem;
}

.c2 h2 {
  margin: 1.5rem 0 1rem;
}

.c2 h3,
.c2 p {
  margin: 1rem 0;
}

.c2 h1 + h2 {
  margin-top: -0.75rem;
}

.c2 h1 + p,
.c2 h2 + p,
.c2 h3 + p {
  margin-top: -0.75rem;
}

.c2 :first-child {
  margin-top: 0;
}

.c2 :last-child {
  margin-bottom: 0;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  width: 100%;
  max-width: 35rem;
  margin: 0px auto;
  padding: 1rem 0.75rem 0.5rem;
}

.c3 {
  font-size: 0.85rem;
  font-weight: 600;
  text-transform: uppercase;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  overflow: auto;
}

.c4:before,
.c4:after {
  content: '';
  z-index: 1;
  -webkit-transition: opacity 0.25s ease;
  transition: opacity 0.25s ease;
  position: absolute;
  height: 0.25rem;
  width: 100%;
}

.c4:before {
  top: 0;
  opacity: 0;
  background: linear-gradient( to bottom, rgb(177,186,190) 0%, transparent 100% );
}

.c4:after {
  bottom: 0;
  opacity: 0;
  background: linear-gradient( to bottom, transparent 0%, rgb(177,186,190) 100% );
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
}

.c6 {
  width: 100%;
  max-width: 35rem;
  margin: 0 auto;
  padding: 0.5rem 0.5rem 1rem;
}

.c7 {
  display: grid;
  grid-auto-rows: minmax(auto,1fr);
  grid-gap: 0.75rem;
}

.c8 {
  cursor: pointer;
  position: relative;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.125rem;
  background: white;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  -webkit-transition: background 0.25s,color 0.25s;
  transition: background 0.25s,color 0.25s;
}

button.c8 {
  text-align: left;
}

.c8:focus-within {
  outline: -webkit-focus-ring-color auto 5px;
}

.c8:before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  background: white;
  border-right: 1px solid;
  border-color: lightgrey;
  width: 3rem;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 2rem;
  border-radius: 0.125rem 0 0 0.125rem;
  color: #028099;
}

.c8 > div {
  word-break: break-word;
  padding: 0.5rem 0.5rem 0.5rem 4rem;
}

.c9 {
  margin-right: 0.5rem;
}

@media (min-width:480px) {
  .c2 {
    line-height: 1.3;
  }
}

@media (min-width:720px) {
  .c1 {
    padding: 1rem 1.5rem 0.5rem;
    padding-left: 5rem;
  }
}

@media (min-width:720px) {
  .c6 {
    padding-right: 1rem;
    padding-left: 1rem;
  }
}

@media (min-width:480px) {
  .c8 > div {
    padding: 1rem 1rem 1rem inherit;
  }
}

<div>
  <main
    class="c0"
  >
    <div
      class="c1"
      id="contest-header"
    >
      <div
        class="c2"
      >
        <h1
          aria-label="City, Mayor."
        >
          <div
            class="c3"
          >
            City
          </div>
          Mayor
        </h1>
        <p>
          <strong>
            Vote for 
            1
            .
          </strong>
           You have selected
           
          0
          .
        </p>
      </div>
    </div>
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <div
            aria-labelledby="contest-header"
            class="c7"
            role="group"
          >
            <label
              class="c8"
              for="name-0"
            >
              <input
                class="visually-hidden c9"
                id="name-0"
                name="Name 0"
                type="checkbox"
                value="name-0"
              />
              <div
                class="c2"
              >
                <p
                  aria-label="Name 0, Party 0."
                >
                  <strong>
                    Name 0
                  </strong>
                  <br />
                  Party 0
                </p>
              </div>
            </label>
            <label
              class="c8"
              for="name-1"
            >
              <input
                class="visually-hidden c9"
                id="name-1"
                name="Name 1"
                type="checkbox"
                value="name-1"
              />
              <div
                class="c2"
              >
                <p
                  aria-label="Name 1, Party 1."
                >
                  <strong>
                    Name 1
                  </strong>
                  <br />
                  Party 1
                </p>
              </div>
            </label>
            <label
              class="c8"
              for="name-2"
            >
              <input
                class="visually-hidden c9"
                id="name-2"
                name="Name 2"
                type="checkbox"
                value="name-2"
              />
              <div
                class="c2"
              >
                <p
                  aria-label="Name 2, Party 0."
                >
                  <strong>
                    Name 2
                  </strong>
                  <br />
                  Party 0
                </p>
              </div>
            </label>
            <button
              class="c8"
            >
              <div
                class="c2"
              >
                <p
                  aria-label="add write-in candidate."
                >
                  <em>
                    add write-in candidate
                  </em>
                </p>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;
